# local-voice-assistant-claude-bmad

./: .gitignore  Makefile  README.md  pyproject.toml
_bmad-output/: architecture.md  bmm-workflow-status.yaml  prd.md
_bmad-output/analysis/: brainstorming-session-2025-12-26.md
_bmad-output/implementation-artifacts/: epic-1-retro-2025-12-27.md  sprint-status.yaml
_bmad-output/implementation-artifacts/stories/: 1-1-monorepo-structure-init.md  1-2-backend-foundation-setup.md  1-3-frontend-foundation-setup.md  1-4-integrated-dev-environment.md  2-1-websocket-foundation.md  2-2-frontend-audio-capture-vad.md  2-3-stt-integration-reazonspeech.md  2-4-llm-integration-openai-compatible.md  2-5-tts-integration-style-bert-vits2.md  2-6-e2e-pipeline-integration.md  2-7-chat-ui-basic.md  3-1-conversation-history-scroll.md  3-2-conversation-history-db-persistence.md  3-3-conversation-list-api.md  3-4-conversation-detail-view.md  3-5-conversation-history-delete.md
_bmad-output/project-planning-artifacts/: epics.md  product-brief-local-voice-assistant-claude-bmad-2025-12-26.md
_bmad-output/project-planning-artifacts/research/: technical-voice-assistant-research-2025-12-26.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
backend/: pyproject.toml
backend/src/voice_assistant/: __init__.py  main.py
backend/src/voice_assistant/api/: __init__.py  websocket.py
backend/src/voice_assistant/core/: __init__.py  config.py  logging.py
backend/src/voice_assistant/db/: __init__.py  models.py  repository.py
backend/src/voice_assistant/llm/: __init__.py  base.py  openai_compat.py
backend/src/voice_assistant/stt/: __init__.py  base.py  reazon_speech.py
backend/src/voice_assistant/tts/: __init__.py  base.py  sentence_buffer.py  style_bert_vits2.py
backend/tests/: __init__.py  test_health.py
backend/tests/integration/: __init__.py  test_conversation_api.py  test_db_repository.py  test_websocket.py
backend/tests/unit/: __init__.py  test_db_models.py  test_llm.py  test_stt.py  test_tts.py
config/: config.example.yaml
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/scripts/: postinstall.sh
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ConversationList.tsx  VoiceInput.tsx  index.ts
frontend/src/core/: audio-player.ts  events.ts  index.ts  websocket-client.ts
frontend/src/hooks/: index.ts  use-conversations.ts  use-voice.ts
scripts/: dev.sh  setup.sh
(+4 files in other folders)
